tdf#112830 measure test with ApplySettings applied

and don't invalidate on first view

Change-Id: I1156c83c0365ef27946cc414cad8dfa07206e5af
Reviewed-on: https://gerrit.libreoffice.org/43498
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 660b12e47d3aedb8fcf2ed2c50f8175d351a51aa)